ignore some files, configure app in json files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-dist/
-node_modules/
+.DS_Store
+.idea
+
+/dist
+/node_modules
+
+*.py[cod]
+__pycache__/
+migrations/
+
+*.db
+db.sqlite3
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
