--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-    "name": "Django VueJs Template",
+    "name": "sto50",
     "description": "",
-    "repository": "https://github.com/gtalarico/django-vue-template",
-    "keywords": ["django", "vue", "vuejs", "template", "django rest framework"],
+    "repository": "https://github.com/mediocre-game-studios/sto50",
+    "keywords": ["django", "vue"],
     "env": {
       "DJANGO_SETTINGS_MODULE": {
         "description": "Set Django Settings to Production",
@@ -10,9 +10,9 @@
       }
      },
      "engines": {
-        "node": "8.11.2",
-        "yarn": "1.4.0",
-        "npm": "6.1.0"
+        "node": "11.9.0",
+        "yarn": "1.13.0",
+        "npm": "6.5.0"
      },
     "addons": [
      ],
