--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "js-cookie": "^2.2.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
+    "vue": "^2.5.16",
     "vuex": "^3.0.1",
+    "vue-router": "^3.0.1",
     "webpack": "^2.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.12",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.12",
-    "@vue/cli-service": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
+    "@vue/cli-service": "^3.0.0-beta.15",
+    "vue-template-compiler": "^2.5.16"
   },
   "babel": {
     "presets": [
