--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,15 @@
 
 /dist
 /node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 *.py[cod]
+Pipfile.lock
 __pycache__/
 migrations/
 /.venv
 
 *.db
 db.sqlite3
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
