--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "ls -l && vue-cli-service build",
     "lint": "vue-cli-service lint",
     "postinstall": "yarn build"
   },
@@ -12,8 +12,9 @@
     "axios": "^0.18.0",
     "js-cookie": "^2.2.0",
     "vue": "^2.5.16",
-    "vuex": "^3.0.1",
     "vue-router": "^3.0.1",
+    "@vue/cli-service": "^3.4.0",
+    "vuex": "^3.0.1",
     "webpack": "^2.0.0"
   },
   "devDependencies": {
