--- a/package.json
+++ b/package.json
@@ -1,55 +1,55 @@
 {
-  "name": "sto50",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "ls -l && vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "postinstall": "yarn build"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "js-cookie": "^2.2.0",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "@vue/cli-service": "^3.4.0",
-    "vuex": "^3.0.1",
-    "webpack": "^2.0.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "vue-template-compiler": "^2.5.16"
-  },
-  "babel": {
-    "presets": [
-      "@vue/app"
-    ]
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "sto50",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "ls -l && vue-cli-service build",
+        "lint": "vue-cli-service lint",
+        "postinstall": "yarn build"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "dependencies": {
+        "axios": "^0.18.0",
+        "js-cookie": "^2.2.0",
+        "vue": "^2.5.16",
+        "vue-router": "^3.0.1",
+        "@vue/cli-service": "^3.4.0",
+        "vuex": "^3.0.1",
+        "webpack": "^2.0.0"
+    },
+    "devDependencies": {
+        "vue-template-compiler": "^2.5.16",
+        "@vue/cli-service": "^3.4.0",
+        "@vue/cli-plugin-babel": "^3.0.0-beta.15",
+        "@vue/cli-plugin-eslint": "^3.0.0-beta.15"
+    },
+    "babel": {
+        "presets": [
+            "@vue/app"
+        ]
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "rules": {},
+        "parserOptions": {
+            "parser": "babel-eslint"
+        }
+    },
+    "postcss": {
+        "plugins": {
+            "autoprefixer": {}
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ]
 }
