--- a/package.json
+++ b/package.json
@@ -4,24 +4,23 @@
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
-        "build": "ls -l && vue-cli-service build",
+        "build": "./node_modules/.bin/vue-cli-service build",
         "lint": "vue-cli-service lint",
         "postinstall": "yarn build"
     },
     "dependencies": {
         "axios": "^0.18.0",
         "js-cookie": "^2.2.0",
-        "vue": "^2.5.16",
-        "vue-router": "^3.0.1",
+        "webpack": "^2.0.0",
+        "vue": "^2.6.4",
+        "vuex": "^3.1.0",
+        "vue-router": "^3.0.2",
         "@vue/cli-service": "^3.4.0",
-        "vuex": "^3.0.1",
-        "webpack": "^2.0.0"
+        "@vue/cli-plugin-babel": "^3.4.0",
+        "@vue/cli-plugin-eslint": "^3.4.0",
+        "vue-template-compiler": "^2.6.4"
     },
     "devDependencies": {
-        "vue-template-compiler": "^2.5.16",
-        "@vue/cli-service": "^3.4.0",
-        "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-        "@vue/cli-plugin-eslint": "^3.0.0-beta.15"
     },
     "babel": {
         "presets": [
