--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
         "lint": "vue-cli-service lint",
         "postinstall": "yarn build"
     },
+    "engines": {
+        "node": "11.9.0",
+        "yarn": "1.13.0"
+    },
     "dependencies": {
         "axios": "^0.18.0",
         "js-cookie": "^2.2.0",
