--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ branches:
   only:
     - master
 
-language: python
+dist: xenial
+sudo: required
 
-python:
-  - "3.7"
+language: python
+python: "3.7"
 
 env:
   global:
