install packages globally, we use disposable test environments anyways

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
     - DJANGO_SETTINGS_MODULE="backend.settings.dev"
 
 install:
-  - python -m pip install --user --upgrade pipenv
+  - python -m pip install pipenv
   - pipenv install --dev
   - pipenv shell
 
