update travis with new paths

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ install:
   - pipenv install --dev
 
 before_script:
-  - python manage.py makemigrations
-  - python manage.py migrate
+  - python -m backend.manage makemigrations
+  - python -m backend.manage migrate
 
 script:
-  - python manage.py test
+  - python -m backend.manage test
