--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 python_version = "3.7"
 
 [packages]
+pyyaml = "*"
 django = "*"
 djangorestframework = "*"
 gunicorn = "*"
@@ -15,3 +16,4 @@ dj-database-url = "*"
 psycopg2-binary = "*"
 
 [dev-packages]
+django-debug-toolbar = "*"
